# english2kana_npfix

./: pyproject.toml  test_translation.py
