[tool.poetry]
name = "english2kana"
version = "0.1.5"
description = "A lightweight tool to convert English and romanized Japanese words into Katakana."
authors = ["yosuke KOBAYASHI <m7142yosuke@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "english2kana", from = "src" }
]
include = [
  "src/english2kana/configs/config.yaml"
]

[tool.poetry.urls]
repository = 'https://github.com/m7142yosuke/english2kana'

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
tensorflow = "^2.18.0"
mojimoji = "^0.0.13"
huggingface-hub = "^0.26.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
black = "^24.10.0"
mypy = "^1.13.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
datasets = "^3.2.0"
pandas-stubs = "^2.2.3.241126"
types-pyyaml = "^6.0.12.20240917"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
strict = true
exclude = ['tests/']

[[tool.mypy.overrides]]
module = ["tensorflow.*", "datasets.*", "huggingface_hub.*"]
ignore_missing_imports = true
